调整地图大小

--- a/kindergarten-portal/src/layouts/index.css
+++ b/kindergarten-portal/src/layouts/index.css
@@ -2,6 +2,6 @@
   background-color: #ffffff;
   border-radius: 5px;
   margin: 30px auto;
-  max-width: 1092px;
-  padding: 30px;
+  max-width: 1225px;
+  padding: 20px 30px;
 }
