修改视频页面

--- a/kindergarten-portal/src/components/Footer/index.css
+++ b/kindergarten-portal/src/components/Footer/index.css
@@ -1,6 +1,7 @@
 .footer {
-  height: 125px;
-  line-height: 125px;
+  font-size: 12px;
+  height: 80px;
+  line-height: 80px;
   text-align: center;
   color: rgba(172,173,175,.55);
 }
