--- a/kindergarten-portal/src/global.css
+++ b/kindergarten-portal/src/global.css
@@ -4,8 +4,8 @@ html, body, :global(#root) {
   margin: 0;
   padding: 0;
   font: 14px/1.5 "Helvetica Neue",Helvetica,Arial,"Microsoft Yahei","Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
-  color: #333;
   background-color: #f8fbfc;
+  color: #5a656f;
 }
 :global(.error-confirm-content .ant-confirm-content) {
   margin-top: 0;
