--- a/kindergarten-portal/src/layouts/index.css
+++ b/kindergarten-portal/src/layouts/index.css
@@ -1,7 +1,6 @@
 .content {
-  background-color: #ffffff;
+  /* background-color: #ffffff; */
   border-radius: 5px;
   margin: 30px auto;
   max-width: 1225px;
-  padding: 20px 30px;
 }
