--- a/kindergarten-portal/src/pages/login/index.css
+++ b/kindergarten-portal/src/pages/login/index.css
@@ -1,6 +1,17 @@
+.content {
+  position: relative;
+  width: 100%;
+  height: 750px;
+  background-color: #ffffff;
+}
 .login {
+  display: inline-block;
+  position: absolute;
   width: 500px;
-  margin: 180px auto 230px;
+  top: 50%;
+  left: 50%;
+  margin-left: -250px;
+  margin-top: -150px;
   text-align: center;
 }
 .title {
