--- a/kindergarten-portal/src/pages/login/components/LoginForm/index.less
+++ b/kindergarten-portal/src/pages/login/components/LoginForm/index.less
@@ -2,9 +2,10 @@
   margin-top: 20px;
   :global(.ant-form-item) {
     & label{
-      font-size: 16px;
+      font-size: 14px;
       color: #303c5f;
-      line-height: 45px;
+      line-height: 40px;
+      padding: 6px 0;
       &:before {
         content: ''
       }
@@ -17,9 +18,9 @@
   :global(.ant-form-item-with-help) {
     margin-bottom: 24px;
   }
-  :global(.ant-input){
-    height: 45px;
-    font-size: 16px;
+  :global(.ant-input-lg){
+    height: 40px;
+    font-size: 14px;
     color: #303c5f;
   }
   :global(.ant-form-explain){
@@ -35,9 +36,10 @@
   width: 100%;
   background-color: #fa5343;
   color: #ffffff;
-  height: 45px;
-  line-height: 45px;
-  border-radius: 10px;
+  height: 40px;
+  line-height: 40px;
+  font-size: 14px;
+  border-radius: 5px;
   &:hover,&:focus,&:active {
     color: #ffffff;
     background-color: #fa5343;
