--- a/kindergarten-portal/src/pages/login/index.css
+++ b/kindergarten-portal/src/pages/login/index.css
@@ -18,10 +18,15 @@
   display: inline-block;
   height: 40px;
   line-height: 40px;
-  padding-left: 60px;
+  padding-left: 40px;
   background: url(../../assets/login-logo.png) no-repeat 0 center;
-  background-size: 40px 40px;
-  font-size: 22px;
+  background-size: 30px 30px;
+  font-size: 18px;
   font-weight: bold;
   color: #303c5f;
+}
+@media (max-width:1440px) {
+  .content {
+    height: 550px;
+  }
 }
