--- a/kindergarten-portal/src/pages/video/components/JianKong/index.css
+++ b/kindergarten-portal/src/pages/video/components/JianKong/index.css
@@ -25,8 +25,9 @@
   width: 95%;
   bottom: 0;
   left: 0;
-  height: 40px;
-  line-height: 40px;
+  height: 35px;
+  line-height: 35px;
+  font-size: 12px;
   background-color: rgba(0,0,0,.6);
   color: #ffffff;
 }
