--- a/kindergarten-portal/src/pages/video/components/Tongji/index.css
+++ b/kindergarten-portal/src/pages/video/components/Tongji/index.css
@@ -10,7 +10,7 @@
   display: block;
   height: 1px;
   width: 100%;
-  background-color: #cccccc;
+  background-color: #f0f0f0;
   margin-top: 20px;
   margin-left: -20px;
 }
