--- a/kindergarten-portal/src/components/Header/index.css
+++ b/kindergarten-portal/src/components/Header/index.css
@@ -9,19 +9,19 @@
 }
 .logo {
   float: left;
-  width: 275px;
+  width: 183px;
   background: url(../../assets/logo.png) no-repeat center center;
-  background-size: 275px 45px;
+  background-size: 183px 30px;
   font-size: 0;
 }
 .info {
   float: right;
-  margin: 15px 0;
+  margin: 20px 0;
   padding-left: 20px;
-  line-height: 30px;
-  font-size: 16px;
+  line-height: 20px;
+  font-size: 12px;
   color: #ffffff;
-  border-left: 1px solid #ffffff;
+  border-left: 1px solid rgba(255,255,255,.7);
 }
 .logout,.logout:active,.logout:hover,.logout:focus,.logout:link {
   color: #ffffff;
