--- a/kindergarten-portal/src/pages/home/components/JinZhongMap/index.css
+++ b/kindergarten-portal/src/pages/home/components/JinZhongMap/index.css
@@ -1,6 +1,10 @@
 .map {
   width: 100%;
   height: 650px;
-  border-top: 1px solid #e0e0e0;
-  margin-top: 20px;
+  margin-top: 10px;
+}
+@media (max-width:1440px) {
+  .map {
+    height: 500px;
+  }
 }
