--- a/kindergarten-portal/src/pages/video/detail/index.css
+++ b/kindergarten-portal/src/pages/video/detail/index.css
@@ -1,12 +1,25 @@
 .content {
   width: 100%;
+  margin-top: 15px;
   background-color: #ffffff;
   padding: 20px 100px;
   text-align: center;
 }
 .title {
-  font-size: 18px;
+  font-size: 16px;
   text-align: left;
+  line-height: 30px;
+}
+.stauts {
+  display: inline-block;
+  background-color: #fa5343;
+  color: #fff;
+  font-size: 14px;
+  padding: 0 8px;
+  border-radius: 5px;
+  margin-left: 10px;
+  height: 20px;
+  line-height: 20px;
 }
 .video {
   width: 100%;
@@ -16,7 +29,7 @@
   padding-left: 10px;
   font-size: 14px;
   font-weight: bold;
-  border-bottom: 1px solid #cccccc;
+  border-bottom: 1px solid #f0f0f0;
   margin-top: 30px;
   line-height: 30px;
   text-align: left;
@@ -39,9 +52,9 @@
 .relevantList .year{
   margin-top: 10px;
   margin-bottom: 15px;
+  padding-left: 10px;
   font-size: 14px;
   font-weight: bold;
-  color: #000000;
 }
 .monthItem {
   display: inline-block;
@@ -49,7 +62,7 @@
   padding: 0 20px;
   background-color: #f0f0f0;
   color: #000000;
-  border-radius: 8px;
+  border-radius: 20px;
   margin-right: 15px;
   cursor: pointer;
 }
@@ -59,7 +72,7 @@
   padding: 0 20px;
   background-color: #3992d6;
   color: #ffffff;
-  border-radius: 8px;
+  border-radius: 20px;
   margin-right: 15px;
   cursor: pointer;
 }
