--- a/monitor/css/devops.css
+++ b/monitor/css/devops.css
@@ -8,3 +8,66 @@ html, body {
   background-color: #333333;
   overflow: hidden;
 }
+.content {
+  width: 100%;
+  margin: 20px;
+  display: flex;
+  box-sizing: border-box;
+  text-align: center;
+  align-items: center;
+}
+.item {
+  display: inline-block;
+  box-sizing: border-box;
+  font-size: 0;
+  width: 14.7%;
+}
+.item img {
+  display: block;
+  font-size: 0;
+  width: 100%;
+}
+.item .status {
+  padding: 10px 0;
+  font-size: 14px;
+  color: #ffffff;
+  line-height: 20px;
+  display: inline-flex;
+  align-items: center;
+}
+.item .status img{
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
+}
+.split{
+  display: inline-block;
+  position: relative;
+  width: 13%;
+  height: 100%;
+}
+.split .line {
+  position: absolute;
+  display: block;
+  top:40%;
+  margin-top: -1px;
+  width: 99%;
+  height: 3px;
+  background-color: #797979;
+}
+.split .line .arrow {
+  position: absolute;
+  top: 50%;
+  right: -1%;
+  margin-top: -10px;
+  content: '';
+  width: 0;
+  height: 0;
+  border-top: 10px solid transparent;
+  border-left: 20px solid #797979;
+  border-bottom: 10px solid transparent;
+}
+.split.down {
+  display: block;
+}
