--- a/monitor/css/main.css
+++ b/monitor/css/main.css
@@ -19,12 +19,53 @@ html, body {
 .total.user {
   position: absolute;
   left: 20px;
-  bottom: 460px;
+  bottom: 325px;
+}
+.total.user .user_box{
+  color: #b9b9b9;
+}
+.total.user .user_box .user_left{
+  float: left;
+}
+.total.user .user_box .user_left .user_left_title{
+  font-size: 12px;
+  margin-bottom: 10px;
+}
+.total.user .user_box .user_left .user_left_number{
+  height: 76px;
+  padding: 3px;
+  background-color: #121011;
+}
+.total.user .user_box .user_center{
+  height: 76px;
+  padding: 3px;
+  width: 48px;
+  float: left;
+}
+.total.user .user_box .user_center span{
+  display: inline-block;
+  height: 45px;
+  width: 2px;
+  margin-top: 38px;
+  margin-left: 26px;
+  background-color: #b9b9b9;
+}
+.total.user .user_box .user_right{
+  float: left;
+}
+.total.user .user_box .user_right .user_right_title{
+  font-size: 12px;
+  margin-bottom: 10px;
+}
+.total.user .user_box .user_right .user_right_number{
+  height: 76px;
+  padding: 3px;
+  background-color: #121011;
 }
 .total.network {
   position: absolute;
   left: 20px;
-  bottom: 325px;
+  bottom: 480px;
 }
 .total.top10 {
   position: absolute;
@@ -48,9 +89,6 @@ html, body {
   width: 57px;
   height: 57px;
 }
-/* .total .item .content {
-  display: inline-block;
-} */
 
 .total .item .content .title {
   color: #b9b9b9;
@@ -76,7 +114,7 @@ html, body {
 }
 .aws {
   left: 20px;
-  top: 80px;
+  top: 60px;
 }
 .radar {
   width: 200px;
@@ -210,22 +248,28 @@ html, body {
    float: left;
 }
 .network_led .network_led_float .network_title{
-  color: #acacac;
+  color: #b9b9b9;
   font-size: 12px;
   margin-bottom: 10px;
-  padding-left: 5px;
 }
 .network_led .network_line{
   float: left;
-  height: 40px;
-  border-left: 2px solid #868686;
-  margin-left: 10px;
-  margin-right: 10px;
-  margin-top: 45px;
+  height: 45px;
+  border-left: 2px solid #b9b9b9;
+  margin-left: 24px;
+  margin-right: 24px;
+  margin-top: 42px;
 }
 .network_led .network_led_float .network_number{
-  float: left;
   background-color: #131313;
   height: 76px;
-  padding-right: 20px;
+  padding-left: 4px;
+  padding-right: 6px;
+}
+.instantBandwidth{
+  position: absolute;
+  bottom: 25px;
+  text-align: center;
+  width: 100%;
+  color: #b9b9b9;
 }
