--- a/monitor/css/devops.css
+++ b/monitor/css/devops.css
@@ -106,6 +106,7 @@ html, body {
   width: 14.5%;
   height: 20px;
   /*margin-right: 20px;*/
+  top: -20px;
 }
 .split.down .line{
   position: absolute;
