1.修改带宽显示单位为K、M、G可计算的

--- a/monitor/css/main.css
+++ b/monitor/css/main.css
@@ -19,7 +19,7 @@ html, body {
 .total.user {
   position: absolute;
   left: 20px;
-  bottom: 325px;
+  bottom: 480px;
 }
 .total.user .user_box{
   color: #b9b9b9;
@@ -34,24 +34,25 @@ html, body {
 .total.user .user_box .user_left .user_left_number{
   height: 76px;
   padding: 3px;
-  background-color: #121011;
+  /*background-color: #121011;*/
 }
 .total.user .user_box .user_center{
   height: 76px;
   padding: 3px;
-  width: 48px;
+  width: 40px;
   float: left;
 }
 .total.user .user_box .user_center span{
   display: inline-block;
   height: 45px;
   width: 2px;
-  margin-top: 38px;
-  margin-left: 26px;
+  margin-top: 18px;
+  margin-left: 20px;
   background-color: #b9b9b9;
 }
 .total.user .user_box .user_right{
   float: left;
+  margin-left: 8px;
 }
 .total.user .user_box .user_right .user_right_title{
   font-size: 12px;
@@ -60,12 +61,12 @@ html, body {
 .total.user .user_box .user_right .user_right_number{
   height: 76px;
   padding: 3px;
-  background-color: #121011;
+  /*background-color: #121011;*/
 }
 .total.network {
   position: absolute;
   left: 20px;
-  bottom: 480px;
+  bottom: 330px;
 }
 .total.top10 {
   position: absolute;
@@ -114,7 +115,7 @@ html, body {
 }
 .aws {
   left: 20px;
-  top: 60px;
+  top: 30px;
 }
 .radar {
   width: 200px;
@@ -196,7 +197,6 @@ html, body {
   position: absolute;
   width: 25px;
   height: 5px;
-
 }
 .led-number li:nth-child(1) {
   left: 0;
@@ -251,17 +251,18 @@ html, body {
   color: #b9b9b9;
   font-size: 12px;
   margin-bottom: 10px;
+  margin-left: 2px;
 }
 .network_led .network_line{
   float: left;
   height: 45px;
   border-left: 2px solid #b9b9b9;
-  margin-left: 24px;
-  margin-right: 24px;
-  margin-top: 42px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 17px;
 }
 .network_led .network_led_float .network_number{
-  background-color: #131313;
+  /*//background-color: #131313;*/
   height: 76px;
   padding-left: 4px;
   padding-right: 6px;
