--- a/monitor/css/bossStatus.css
+++ b/monitor/css/bossStatus.css
@@ -9,8 +9,8 @@ body {
 }
 
 .title {
-  margin-top: 30px;
-  margin-left: 10px;
+  margin-top: 10px;
+  margin-left: 6%;
   display: inline-block;
 }
 
@@ -59,7 +59,7 @@ body {
   background-image: url("../img/boss/ban.png");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 120px;
+  height: 100px;
 }
 
 .sassPlaceHolder, .iassPlaceHolder {
@@ -112,7 +112,7 @@ body {
   background-image: url("../img/boss/ban.png");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 120px;
+  height: 100px;
 }
 
 .iaasContent>li {
@@ -142,12 +142,13 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  padding-bottom: 5px;
 }
 
 .cloud {
   margin: 0 auto;
-  width: 412px;
-  height: 236px;
+  width: 206px;
+  height: 118px;
   background-image: url("../img/boss/yun.png");
   background-repeat: no-repeat;
   background-position: center center;
@@ -157,13 +158,15 @@ body {
 
 .countryGroupWrap {
   display: flex;
-  width: 80%;
+  width: 85%;
   margin: 0 auto;
 }
 
 .countryGroup {
   flex: 1;
   background-color: #222223;
+}
+.countryGroup:not(:last-child){
   margin-right: 10px;
 }
 
@@ -195,7 +198,7 @@ body {
 }
 
 .countryTime {
-  flex: 2;
+  flex: 1;
   text-align: center;
   padding-top: 5px;
 }
@@ -240,224 +243,220 @@ body {
 
 @-webkit-keyframes star_span_01 {
   0%, 100% {
-    -webkit-transform: translateX(0rem);
+    -webkit-transform: translateX(0);
   }
   50% {
-    -webkit-transform: translateX(-27.8rem);
+    -webkit-transform: translateX(-290px);
   }
 }
 
 @keyframes star_span_01 {
   0%, 100% {
-    transform: translateX(0rem);
+    transform: translateX(0);
   }
   50% {
-    transform: translateX(-27.8rem);
+    transform: translateX(-290px);
   }
 }
 
 @-webkit-keyframes star_i_01 {
   0%, 100% {
-    -webkit-transform: translateY(0rem) scale(0.8);
+    -webkit-transform: translateY(0) scale(0.8);
   }
   50% {
-    -webkit-transform: translateY(8rem) scale(1);
+    -webkit-transform: translateY(88.2px) scale(1);
   }
 }
 
 @keyframes star_i_01 {
   0%, 100% {
-    transform: translateY(0rem) scale(0.8);
+    transform: translateY(0) scale(0.8);
   }
   50% {
-    transform: translateY(8rem) scale(1);
+    transform: translateY(88.2px) scale(1);
   }
 }
 
 @-webkit-keyframes star_span_02 {
   0%, 100% {
-    -webkit-transform: translateX(0rem);
+    -webkit-transform: translateX(0);
   }
   50% {
-    -webkit-transform: translateX(-32rem);
+    -webkit-transform: translateX(-350px);
   }
 }
 
 @keyframes star_span_02 {
   0%, 100% {
-    transform: translateX(0rem);
+    transform: translateX(0);
   }
   50% {
-    transform: translateX(-32rem);
+    transform: translateX(-350px);
   }
 }
 
 @-webkit-keyframes star_i_02 {
   0%, 100% {
-    -webkit-transform: translateY(0rem) scale(0.8);
+    -webkit-transform: translateY(0) scale(0.8);
   }
   50% {
-    -webkit-transform: translateY(9.4rem) scale(1);
+    -webkit-transform: translateY(106.2px) scale(1);
   }
 }
 
 @keyframes star_i_02 {
   0%, 100% {
-    transform: translateY(0rem) scale(0.8);
+    transform: translateY(0) scale(0.8);
   }
   50% {
-    transform: translateY(9.4rem) scale(1);
+    transform: translateY(106.2px) scale(1);
   }
 }
 
 @-webkit-keyframes star_span_03 {
   0%, 100% {
-    -webkit-transform: translateX(0rem);
+    -webkit-transform: translateX(0);
   }
   50% {
-    -webkit-transform: translateX(-35.8rem);
+    -webkit-transform: translateX(-410px);
   }
 }
 
 @keyframes star_span_03 {
   0%, 100% {
-    transform: translateX(0rem);
+    transform: translateX(0);
   }
   50% {
-    transform: translateX(-35.8rem);
+    transform: translateX(-410px);
   }
 }
 
 @-webkit-keyframes star_i_03 {
   0%, 100% {
-    -webkit-transform: translateY(0rem) scale(0.8);
+    -webkit-transform: translateY(0) scale(0.8);
   }
   50% {
-    -webkit-transform: translateY(10.5rem) scale(1);
+    -webkit-transform: translateY(124.2px) scale(1);
   }
 }
 
 @keyframes star_i_03 {
   0%, 100% {
-    transform: translateY(0rem) scale(0.8);
+    transform: translateY(0) scale(0.8);
   }
   50% {
-    transform: translateY(10.5rem) scale(1);
+    transform: translateY(124.2px) scale(1);
   }
+}
+
+
+.wrap-bg {
+  width: 290px;
+  height: 290px;
+  position: absolute;
+  top: -10px;
+  left: 50%;
+  margin-left: -145px;
+  border: 2px solid #30af81;
+  border-radius: 50%;
+  -webkit-transform: scale3d(1, 0.3, 1);
+  transform: scale3d(1, 0.3, 1);
+}
+
+.wrap-bg2 {
+  width: 350px;
+  height: 350px;
+  top: -30px;
+  margin-left: -175px;
+}
+
+.wrap-bg3 {
+  width: 410px;
+  height: 410px;
+  top: -50px;
+  margin-left: -205px;
 }
 .wrap-icon {
   position: absolute;
   background-size: 100%;
   background-repeat: no-repeat;
   left: 50%;
-  top: 2rem;
+  top: 0;
   z-index: 2;
   opacity: 0;
-  width: 1rem;
-  height: 1rem;
-  margin-left: 13.5rem;
-  margin-top: 9.6rem;
+  width: 15px;
+  height: 15px;
+  margin-top: 84px;
+  margin-left: 140px;
   -webkit-animation: star_01 0.5s 2.5s linear forwards;
   animation: star_01 0.5s 2.5s linear forwards;
 }
 
 .wrap-icon span {
-  width: 1rem;
-  height: 1rem;
+  width: 15px;
+  height: 15px;
   display: block;
   -webkit-animation: star_span_01 10s 0s ease-in-out infinite;
   animation: star_span_01 10s 0s ease-in-out infinite;
 }
 
 .wrap-icon i {
-  width: 1rem;
-  height: 1rem;
-  border-radius: 0.5rem;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
   display: block;
   background: #30af81;
   background-size: 100% 100%;
   -webkit-animation: star_i_01 10s 2.5s ease-in-out infinite;
   animation: star_i_01 10s 2.5s ease-in-out infinite;
 }
-
-.wrap-bg {
-  width: 28rem;
-  height: 28rem;
-  position: absolute;
-  top: 2rem;
-  left: 50%;
-  margin-left: -14rem;
-  border: 0.1rem solid #30af81;
-  border-radius: 28rem;
-  -webkit-transform: scale3d(1, 0.3, 1);
-  transform: scale3d(1, 0.3, 1);
-}
-
-.wrap-bg2 {
-  width: 32rem;
-  height: 32rem;
-  top: 0.7rem;
-  margin-left: -16rem;
-  border-radius: 32rem;
-}
-
-.wrap-bg3 {
-  width: 36rem;
-  height: 36rem;
-  top: -0.5rem;
-  margin-left: -18rem;
-  border-radius: 36rem;
-}
-
 .wrap-icon2 {
-  margin-left: 15.9rem;
-  margin-top: 9.9rem;
+  margin-left: 170px;
+  margin-top: 87px;
 }
 
 .wrap-icon2 span {
-  width: 0.6rem;
-  height: 0.6rem;
+  width: 12px;
+  height: 12px;
   -webkit-animation: star_span_02 16s 0s ease-in-out infinite;
   animation: star_span_02 16s 0s ease-in-out infinite;
 }
 
 .wrap-icon2 i {
-  width: 0.6rem;
-  height: 0.6rem;
-  border-radius: 0.3rem;
+  width: 12px;
+  height: 12px;
   -webkit-animation: star_i_02 16s 4s ease-in-out infinite;
   animation: star_i_02 16s 4s ease-in-out infinite;
 }
 
 .wrap-icon3 {
-  margin-left: 17.7rem;
-  margin-top: 9.9rem;
+  margin-left: 200px;
+  margin-top: 87px;
 }
 
 .wrap-icon3 span {
-  width: 0.7rem;
-  height: 0.7rem;
+  width: 18px;
+  height: 18px;
   -webkit-animation: star_span_03 12s 0s ease-in-out infinite;
   animation: star_span_03 12s 0s ease-in-out infinite;
 }
 
 .wrap-icon3 i {
-  width: 0.7rem;
-  height: 0.7rem;
-  border-radius: 0.35rem;
+  width: 18px;
+  height: 18px;
   -webkit-animation: star_i_03 12s 3s ease-in-out infinite;
   animation: star_i_03 12s 3s ease-in-out infinite;
 }
 .countryLine {
   position: relative;
   width: 80%;
-  margin: 40px auto 0;
+  margin: 0 auto;
   display: flex;
   overflow: hidden;
 }
 .itemLine {
   position: relative;
-  height: 220px;
+  height: 80px;
   text-align: center;
   border-bottom: 1px solid #30af81;
 }
@@ -475,25 +474,25 @@ body {
 
 .itemLine1{
   width: 40%;
-  left: -20%;
-  transform:rotateZ(-30deg)  scale(2);
+  left: -7%;
+  transform:rotateZ(-10deg);
 }
 .itemLine2 {
   width: 10%;
-  top: 145px;
-  left: 10%;
-  transform:rotateZ(-240deg)  scale(2);
+  top: 75px;
+  left: -6%;
+  transform:rotateZ(-220deg);
 }
 .itemLine3{
   width: 10%;
-  top: 145px;
-  left: -10%;
-  transform:rotateZ(240deg)  scale(2);
+  top: 75px;
+  left: 6%;
+  transform:rotateZ(220deg);
 }
 .itemLine4{
   width: 40%;
-  right: -20%;
-  transform:rotateZ(30deg)  scale(2);
+  right: -7%;
+  transform:rotateZ(10deg);
 }
 .itemLine .line::after{
   position: absolute;
@@ -536,14 +535,14 @@ body {
 .cloudline {
   position: relative;
   width: 100%;
-  height: 120px;
+  height: 60px;
 }
 .cloudline .line{
   position:absolute;
   left:50%;
-  top:0;
+  top:5px;
   width: 2px;
-  height:100%;
+  height:50px;
   box-sizing:border-box;
   background-color: #30af81;
 }
@@ -553,9 +552,9 @@ body {
   width: 0;
   height: 0;
   top: 100%;
-  left: -10px;
-  margin-top: -10px;
-  border-left: 10px solid transparent;
-  border-top: 20px solid #30af81;
-  border-right: 10px solid transparent;
+  left: -4px;
+  margin-top: -5px;
+  border-left: 5px solid transparent;
+  border-top: 10px solid #30af81;
+  border-right: 5px solid transparent;
 }
