--- a/monitor/css/bossStatus.css
+++ b/monitor/css/bossStatus.css
@@ -10,7 +10,6 @@ body {
 
 .title {
   margin-top: 5px;
-  margin-left: 6%;
   display: inline-block;
 }
 
@@ -47,6 +46,8 @@ body {
 
 .sassTitle {
   flex: 1;
+  text-align: center;
+  margin-top: -31px;
 }
 
 .sassTitle p {
@@ -79,7 +80,7 @@ body {
   list-style: none;
   padding-top: 10px;
   background-color: #262627;
-  margin-top: -33px;
+  margin-top: -50px;
   font-size: 16px;
 }
 
@@ -113,6 +114,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   height: 100px;
+  font-size: 14px;
 }
 
 .iaasContent>li {
@@ -121,7 +123,7 @@ body {
   width: 9%;
   margin-right: 8px;
   list-style: none;
-  margin-top: -33px;
+  margin-top: -35px;
 }
 
 .iaasContent>li:first-child {
@@ -158,7 +160,7 @@ body {
 
 .countryGroupWrap {
   display: flex;
-  width: 85%;
+  width: 80%;
   margin: 0 auto;
 }
 
@@ -172,18 +174,19 @@ body {
 
 .countryTitle {
   text-align: center;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   border-bottom: 1px solid #303031;
 }
 
 .countryItem {
   display: flex;
   padding: 5px;
+  font-size: 14px;
 }
 
 .countryImg {
-  flex: 1;
+  width: 50px;
   padding-left: 10px;
 }
 
@@ -192,19 +195,23 @@ body {
 }
 
 .countryName {
-  flex: 2;
-  text-align: center;
+  text-align: justify;
+  text-justify: distribute-all-lines;
+  text-align-last: justify;
+  -moz-text-align-last: justify;
+  -webkit-text-align-last: justify;
+  min-width: 56px;
   padding-top: 5px;
 }
 
 .countryTime {
-  flex: 1;
+  width: 60px;
   text-align: center;
   padding-top: 5px;
 }
 
 .countryStatus {
-  flex: 1;
+  width: 30px;
   padding-top: 10px;
 }
 
@@ -475,24 +482,24 @@ body {
 .itemLine1{
   width: 40%;
   left: -7%;
-  transform:rotateZ(-10deg);
+  transform:rotateZ(-20deg);
 }
 .itemLine2 {
   width: 10%;
-  top: 75px;
+  top: 45px;
   left: -6%;
-  transform:rotateZ(-220deg);
+  transform:rotateZ(-230deg);
 }
 .itemLine3{
   width: 10%;
-  top: 75px;
+  top: 45px;
   left: 6%;
-  transform:rotateZ(220deg);
+  transform:rotateZ(230deg);
 }
 .itemLine4{
   width: 40%;
   right: -7%;
-  transform:rotateZ(10deg);
+  transform:rotateZ(20deg);
 }
 .itemLine .line::after{
   position: absolute;
@@ -535,7 +542,7 @@ body {
 .cloudline {
   position: relative;
   width: 100%;
-  height: 60px;
+  height: 90px;
 }
 .cloudline .line{
   position:absolute;
