--- a/monitor/css/bossStatus.css
+++ b/monitor/css/bossStatus.css
@@ -148,7 +148,7 @@ body {
 }
 
 .cloud {
-  margin: 0 auto;
+  margin: -40px auto 0;
   width: 206px;
   height: 118px;
   background-image: url("../img/boss/yun.png");
@@ -457,111 +457,125 @@ body {
 .countryLine {
   position: relative;
   width: 80%;
-  margin: 0 auto;
+  margin: 10px auto 0;
   display: flex;
   overflow: hidden;
 }
 .itemLine {
   position: relative;
-  height: 80px;
+  width: 100%;
+  height: 130px;
   text-align: center;
-  border-bottom: 1px solid #30af81;
 }
-.itemLine .line{
-  position: relative;
-  content: " ";
-  position:absolute;
-  left:0;
-  top:0;
-  width:100%;
-  height:100%;
-  box-sizing:border-box;
-  transform-origin:bottom center;
+.itemLine:after {
+  content:"";
+	position:absolute;
+	width:200%;
+	height:2px;
+	bottom:0;
+	z-index:3;
+	background:-webkit-repeating-linear-gradient(0deg,#30af81 0,#30af81 3px,rgba(0,0,0,0) 3px,rgba(0,0,0,0) 6px);
 }
 
 .itemLine1{
-  width: 40%;
-  left: -7%;
-  transform:rotateZ(-20deg);
+  top: -20px;
+  left: 4%;
+  transform:rotateZ(-25deg);
+}
+.itemLine1.itemLine:after{
+  -webkit-animation: solid-line-right linear 16s infinite;
+  animation:solid-line-right linear 16s infinite;
 }
 .itemLine2 {
-  width: 10%;
-  top: 45px;
-  left: -6%;
+  top: -25px;
+  left: 14%;
   transform:rotateZ(-230deg);
 }
+.itemLine2.itemLine:after{
+  -webkit-animation: solid-line-left linear 10s infinite;
+  animation:solid-line-left linear 10s infinite;
+}
 .itemLine3{
-  width: 10%;
-  top: 45px;
-  left: 6%;
+  top: 150px;
+  left: 1%;
   transform:rotateZ(230deg);
 }
+.itemLine3.itemLine:after{
+  -webkit-animation: solid-line-right linear 10s infinite;
+  animation:solid-line-right linear 10s infinite;
+}
 .itemLine4{
-  width: 40%;
-  right: -7%;
-  transform:rotateZ(20deg);
+  top: -120px;
+  right: 25.5%;
+  transform:rotateZ(25deg);
 }
-.itemLine .line::after{
-  position: absolute;
-  content: '';
-  width: 0;
-  height: 0;
-}
-.itemLine1 .line::after{
-  top: 100%;
-  right: -5px;
-  margin-top: -5px;
-  border-top: 5px solid transparent;
-  border-left: 10px solid #30af81;
-  border-bottom: 5px solid transparent;
-}
-.itemLine2 .line::after{
-  top: 100%;
-  left: -5px;
-  margin-top: -5px;
-  border-top: 5px solid transparent;
-  border-right: 10px solid #30af81;
-  border-bottom: 5px solid transparent;
-}
-.itemLine3 .line::after{
-  top: 100%;
-  right: -5px;
-  margin-top: -5px;
-  border-top: 5px solid transparent;
-  border-left: 10px solid #30af81;
-  border-bottom: 5px solid transparent;
-}
-.itemLine4 .line::after{
-  top: 100%;
-  left: -5px;
-  margin-top: -5px;
-  border-top: 5px solid transparent;
-  border-right: 10px solid #30af81;
-  border-bottom: 5px solid transparent;
+.itemLine4.itemLine:after{
+  -webkit-animation: solid-line-left linear 16s infinite;
+  animation:solid-line-left linear 16s infinite;
 }
 .cloudline {
   position: relative;
   width: 100%;
   height: 90px;
+  overflow: hidden;
 }
-.cloudline .line{
-  position:absolute;
-  left:50%;
-  top:5px;
-  width: 2px;
-  height:50px;
-  box-sizing:border-box;
-  background-color: #30af81;
+.cloudline .line:after{
+  content:"";
+	position:absolute;
+  left: 50%;
+	width:2px;
+	height:200%;
+	bottom:-120%;
+	z-index:3;
+	background:-webkit-repeating-linear-gradient(90deg,#30af81 0,#30af81 3px,rgba(0,0,0,0) 3px,rgba(0,0,0,0) 6px);
+  -webkit-animation: solid-line-down linear 8s infinite;
+  animation:solid-line-down linear 8s infinite;
 }
-.cloudline .line::after{
-  position: absolute;
-  content: '';
-  width: 0;
-  height: 0;
-  top: 100%;
-  left: -4px;
-  margin-top: -5px;
-  border-left: 5px solid transparent;
-  border-top: 10px solid #30af81;
-  border-right: 5px solid transparent;
+@keyframes solid-line-left {
+  from {
+  	transform:translateX(0);
+  }
+  to {
+  	transform:translateX(-50%);
+  }
+}
+@-webkit-keyframes solid-line-left {
+  from {
+  	transform:translateX(0);
+  }
+  to {
+  	transform:translateX(-50%);
+  }
+}
+@keyframes solid-line-right {
+  from {
+  	transform:translateX(-50%);
+  }
+  to {
+  	transform:translateX(0);
+  }
+}
+@-webkit-keyframes solid-line-right {
+  from {
+  	transform:translateX(-50%);
+  }
+  to {
+  	transform:translateX(0);
+  }
+}
+@keyframes solid-line-down {
+  from {
+  	transform:translateY(-50%);
+  }
+  to {
+  	transform:translateY(0);
+  }
+}
+@-webkit-keyframes solid-line-down {
+  from {
+  	transform:translateY(-50%);
+  }
+  to {
+  	transform:translateY(0);
+  }
 }
