--- a/infomation/src/global.css
+++ b/infomation/src/global.css
@@ -1,13 +1,22 @@
-html, body {
+html {
+  background: #fff;
+  font-family: 'STHeiti', 'Microsoft YaHei', 'Helvetica', 'Arial', sans-serif;
+  -webkit-text-size-adjust: none;
+  word-break: break-word;
+}
+
+body {
   margin: 0;
   padding: 0;
   height: 100%;
-  background: #fff;
 }
+
 #root {
   height: 100%;
   box-sizing: border-box;
+  background: #fff;
 }
+
 .iconfont {
   font-size: 140px;
 }
