--- a/infomation/src/pages/mobile.ejs
+++ b/infomation/src/pages/mobile.ejs
@@ -8,7 +8,7 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="format-detection" content="email=no" />
     <meta name="viewport" content="width=device-width,initial-scale=0.1,maximum-scale=0.1,minimum-scale=0.1,user-scalable=no">
-    <link rel="stylesheet" href="/iconfont/iconfont.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_799474_xxp96wh81wr.css">
     <title>xuan123.com-每天看一点最具价值的信息！</title>
 </head>
 <body >
