--- a/infomation/src/components/Header/index.css
+++ b/infomation/src/components/Header/index.css
@@ -1,16 +1,17 @@
 .header {
-  background-color: #0084ff;
-  height: 450px;
+  background-color: #d43d3d;
+  height: 45px;
   text-align: center;
 }
 .logo {
-  display: block;
-  width: 1500px;
-  height: 200px;
+  display: inline-block;
+  width: 150px;
+  height: 20px;
+  margin-top: 13px;
 }
 .title {
-  display: block;
-  width: 1550px;
-  height: 150px;
-  margin-top: 50px;
+  display: inline-block;
+  width: 155px;
+  height: 15px;
+  margin-top: 18px;
 }
